The cart.php is almost responsive the white spaces must be fixed. Some changes are made to the index form. the link to the contact page is added.

--- a/Webshop/cartStyle.css
+++ b/Webshop/cartStyle.css
@@ -1,57 +1,13 @@
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
+    font-family: helvetica;
+} 
 
 html{
     display: flex;
     flex-direction: column;
-}
-
-/*nav bar*/
-.bg-dark {
-    background-color: #343a40!important;
-}
-
-.navbar {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: .5rem 1rem;
-}
-
-.navbar-dark .navbar-brand {
-    color: #fff;
-}
-
-.navbar-brand {
-    display: inline-block;
-    padding-top: .3125rem;
-    padding-bottom: .3125rem;
-    margin-right: 1rem;
-    font-size: 1.25rem;
-    line-height: inherit;
-    white-space: nowrap;
-}
-
-/*Navigation*/
-.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
-    color: #fff;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-    color: rgba(255,255,255,.5);
-}
-
-a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
-}
-
-.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
-    color: #fff;
 }
 
 /*Text*/
@@ -97,22 +53,6 @@ h1, h2, h3, h4, h5, h6 {
     padding: 3% 0;
 }
 
-/*Button*/
-button, select {
-    text-transform: none;
-}
-
-button, input {
-    overflow: visible;
-}
-
-button, input, optgroup, select, textarea {
-    margin: 0;
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-}
-
 button {
     border-radius: 0;
 }
@@ -121,26 +61,18 @@ button {
     cursor: pointer;
 }
 
-.btn-danger {
-    color: #fff;
-    background-color: #dc3545;
-    border-color: #dc3545;
-}
-
-.btn-warning {
-    color: #fff;
-    background-color: #FFA833;
-    border-color: #FFA833;
-}
-
 /*Container*/
 .container-fluid {
-    width: 100%;
+    width: 210%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
     height: auto;
+}
+
+.purchase {
+    width: 40%;
 }
 
 .row {
@@ -157,9 +89,9 @@ button {
     padding-left: 15px;
 }
 
-.cart-items + .cart-items {
+/*.cart-items + .cart-items {
     padding: 2% 0;
-}
+}*/
 
 /*Tables*/
 hr {
@@ -176,18 +108,9 @@ form {
     margin-block-end: 1em;
 }
 
-/*Card design*/
-.rounded {
-    border-radius: .25rem;
-}
-
-.border {
-    border: 1px solid #dee2e6;
-}
-
 /*Position*/
 .pl-5, .px-5 {
-    padding-left: 3rem;
+    padding-left: 0.5rem;
 }
 
 .pt-2, .py-2 {
@@ -195,21 +118,11 @@ form {
 }
 
 .bg-white {
-    background-color: #fff!important;
-}
-
-/*Image position*/
-.pl-0, .px-0 {
-    padding-left: 0!important;
+    background-color: #fff;
 }
 
 .text-secondary {
-    color: #6c757d!important;
-}
-
-.small, small {
-    font-size: 80%;
-    font-weight: 400;
+    color: #6c757d;
 }
 
 small {
@@ -219,7 +132,7 @@ small {
 /*image*/
 img {
     max-width: 100%;
-    height: auto;
+    height: 120px;
     /* background: lightblue;
     background: radial-gradient(white 30%, lightblue 70%); */
 }
@@ -228,12 +141,12 @@ img {
 /*position*/
 .mt-5, .my-5 {
     margin-top: 5rem;
-    margin-left: 1rem;
+    margin-left: 3rem;
 }
 
-.pt-4, .py-4 {
+/*.pt-4, .py-4 {
     padding-top: 1.5rem;
-}
+}*/
 
 /*Text*/
 .h-25 {
@@ -246,4 +159,17 @@ img {
 
 .text-success {
     color: #28a745;
+}
+
+.main{
+    width: 1000px;
+    margin: 50px auto;
+    border-radius: 10px;
+    box-shadow: 1px 2px 10px #555;
+}
+
+@media (min-width: 320px) and (max-width: 480px){
+    .main{
+        width: 90%;
+    }
 }
